environments/exercises-local/log-output-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: exercises
spec:
  parentRefs:
  - name: log-output-gateway
  rules:

  # paths
  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: log-output-svc
      port: 80
