environments/exercises-local/ping-pong-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ping-pong-route
  namespace: exercises
spec:
  parentRefs:
  - name: log-output-gateway
  rules:

  # paths
  - matches:
    - path:
        type: Exact
        value: /pingpong
    - path:
        type: Exact
        value: /pings
    backendRefs:
    - name: ping-pong-svc
      port: 3456
